# surge-rack

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  RackSDK.cmake  Unused but set vars warnings.txt  azure-pipelines.yml  mingw-w64-x86_64.cmake  plugin.json  x  x86_64-ubuntu16.04-linux-gnu.cmake
.github/workflows/: build-plugin.yml  code-checks.yml  make-extra-content.yml  native-os-build-plugin.yml
design/: SurgeVCV.js  buttonBank.sketch  buttonBankInstructions.rtf  fx.sketch
docs/: arch.md  changelog.md  install_steps.md  nightlychangelog.md
docs/dev/: Blank12.cpp  Blank12.h  go.pl
patches/: Chorus Delay OSC LFO and ADSR.vcv  RotaryExample.vcv  SurgeADSR.vcv  SurgeFX.vcv  SurgeFX_v062.vcv  SurgePulsingSquare.vcv
presets/SurgeDelay/: Ping-Pong 1-16.vcvm  Wide 1-4.vcvm  Wide 1-8.vcvm  Wide Chorus (using Delay).vcvm
presets/SurgeEQ/: Smiley Curve.vcvm
presets/SurgeOSC/: Init_Classic.vcvm  Init_FM2.vcvm  Init_FM3.vcvm  Init_Saw.vcvm
presets/SurgePhaser/: Stereo Phaser.vcvm  Talky.vcvm
presets/SurgeRotary/: Distorted Doppler.vcvm  Subtle.vcvm  Thats Not What Leslie Wanted.vcvm  Warble.vcvm  Warm Rotation.vcvm
res/: FONTS.md  fxconfig.xml
res/presets/DELAY/: Chorus (using Delay).vcvm  Init.vcvm  Ping-Pong 1-4.vcvm  Ping-Pong 1-8.vcvm  Repeat.vcvm  Rhythmic 1.vcvm  Rhythmic 2.vcvm  Rhythmic 3.vcvm
res/presets/EQ/: Air.vcvm  Init.vcvm  Mid Cut.vcvm
res/presets/OSC/: Init_Noise.vcvm  Init_Sine.vcvm  Init_Square.vcvm
res/presets/PHASER/: Init.vcvm
res/presets/ROTARY/: Fast.vcvm  Init.vcvm  Slow.vcvm
res/skins/: Classic.xml  Miami.xml  NewYork.xml  Night.xml  classic-skin.xml
res/surge_extra_data/fx_presets/Rotary/: Distorted Doppler.srgfx  Warm Rotation.srgfx
res/vectors/: index.html
res/xt/fonts/quicksand/: README.txt
scripts/: BlankFXPanel.cppDontCompile  buildutil.sh  dev-rosetta.sh  dev.sh  drun.sh  fix_file_comments.pl  fix_header_guards.pl  g1.sh  g1sdk.sh  g6.sh  make-fx-presets.py  rack-sdk-220-cross.patch  release-notes.sh  resetversion.sh
src/: Delay.cpp  Delay.h  Delay.hpp  DelayLineByFreq.cpp  DelayLineByFreq.h  DelayLineByFreq.hpp  DelayLineByFreqExpanded.cpp  DelayLineByFreqExpanded.h  DigitalRingMod.cpp  DigitalRingMod.h  EGxVCA.cpp  EGxVCA.h  FX.cpp  FX.h  FX.hpp  FXConfig.h  FXConfig.hpp  LFO.cpp  LFO.h  LFO.hpp  LayoutConstants.h  LayoutEngine.h  Mixer.cpp  Mixer.h  Mixer.hpp  ModMatrix.cpp  ModMatrix.h  ModMatrix.hpp  NBarEditorWidget.h  QuadAD.cpp  QuadAD.h  QuadLFO.cpp  QuadLFO.h  Surge.cpp  Surge.hpp  SurgeADSR.cpp  SurgeADSR.hpp  SurgeBiquad.cpp  SurgeBiquad.hpp  SurgeChorus.cpp  (+69 more)
src/dsp/: ADAREnvelope.h  ADSRDAHDEnvelope.h  PanLaws.h  SimpleLFO.h
src/fxconfig/: Bonsai.h  Chorus.h  Chow.h  Combulator.h  Distortion.h  Ensemble.h  Exciter.h  Flanger.h  FrequencyShifter.h  Neuron.h  Nimbus.h  Phaser.h  Resonator.h  Reverb1.h  Reverb2.h  RingModulator.h  RotarySpeaker.h  SpringReverb.h  TreeMonster.h  Vocoder.h
src/vcoconfig/: Alias.h  Classic.h  FM2.h  FM3.h  Modern.h  SHNoise.h  Sine.h  String.h  Twist.h  Wavetable.h  Window.h
